--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "socket.io": "^3.1.2"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.0",
